--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
